syntax="proto3";

package service_1;
option go_package="genproto/service_1";
import "google/protobuf/empty.proto";


service Service_1 {
    rpc GetAll(google.protobuf.Empty) returns (Status) {}
}



message Status {
    string status = 1;
}