syntax="proto3";

package service_2;
option go_package="genproto/service_2";


service Service_2 {
    rpc GetAll(GetAllRequest) returns (GetAllResponse) {}
    rpc GetById (Id) returns (Post) {}
    rpc Update(Post) returns (Post) {}
    rpc Delete(Id) returns (Id) {}
}

message Id {
    int32 id = 1;
}

message Post {
    int32 id = 1;
    int32 user_id = 2;
    string title = 3;
    string body = 4;
}

message GetAllRequest {
    int32 limit = 1;
    int32 offset = 2;
    string search = 3;
}

message GetAllResponse {
    repeated Post posts = 1;
    int32 count = 2;
}


